[package]
name = "blobssss"
version = "0.1.0"
edition = "2021"
description = "Blob Super Simple Spammer for Shadow"

[dependencies]
alloy = { version = "0.2.1", features = [
    "consensus",
    "network",
    "providers",
    "rpc-types",
    "signer-local",
    "kzg",
] }
tokio = {  version = "1.39.3", features = ["rt-multi-thread", "macros", "time"] }
eyre = "0.6.12"
clap = { version = "4.5.16", features = ["derive"] }
url = "2.5.2"
futures = "0.3.30"
rand = "0.8.5"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
